flycheck-stan/examples/example_error_invalid_character.stanc3out.txt

Syntax error in 'examples/example_error_invalid_character.stan', line 14, column 17, lexing error:
   -------------------------------------------------
    12:  }
    13:  transformed parameters {
    14:    vector[J] theta;$
                           ^
    15:    theta = mu + tau * eta;
    16:  }
   -------------------------------------------------

Invalid character found.

